--- a/codes/day-1/ts-app/tsconfig.json
+++ b/codes/day-1/ts-app/tsconfig.json
@@ -1,7 +1,10 @@
 {
-    "compilerOptions": {
-        "rootDir": "src",
-        "outDir": "dist",
-        "target": "ES5"
-    }
+  "compilerOptions": {
+    "target": "ES5",
+    "rootDir": "src",
+    "outDir": "dist",
+    "strict": true,
+    "module": "AMD",
+    "forceConsistentCasingInFileNames": true
+  }
 }
